Se creó con Colab

--- a/Programa1.ipynb
+++ b/Programa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCnTXL46ByJpE1lQBgJL61",
+      "authorship_tag": "ABX9TyPWNx8AXPDLHMapW5ZXb0Vs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,25 +27,155 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "XJFzxPZ34I0S"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "**Programación orientada a objetos**\n",
         "##Unidad 1 Introduccion POO\n",
-        "###Maestro: Jose Gabriel Rodirguez Rivas\n",
+        "###Maestro: Jose Gabriel Rodriguez Rivas\n",
         "###Alumno: Marcela Perez Gurrrola"
       ],
       "metadata": {
         "id": "EX9FfOxi4j9q"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "variable = input(\"escribe tu nombre \")\n",
+        "print(\"tu nombre es\",variable)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1oLfE9GnbQma",
+        "outputId": "052b6b9c-0981-4c0b-dffc-4e99143ad10b"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "escribe tu nombre marcela\n",
+            "tu nombre es marcela\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nom = input(\"¿me puedes dar tu noombre por favor? \")\n",
+        "ape = input(\"¿me puedes dar tu apellido por favor? \")\n",
+        "print(\"gracias\")\n",
+        "print(\"tu nombre es\", nom, ape,\".\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JUdRrrJQdJeD",
+        "outputId": "986a86d9-4740-4bad-bc71-8d17d89e0226"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¿me puedes dar tu noombre por favor? MARCELA\n",
+            "¿me puedes dar tu apellido por favor? PEREZ\n",
+            "gracias\n",
+            "tu nombre es MARCELA PEREZ .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#MARCA Error porque debe convertir el tipo de dato\n",
+        "#en si no lo marca pero no hace la acccion qe queremos\n",
+        "#hay que convertir a tipo entero porque es cadena\n",
+        "x=input(\"dame un numero para multiplicar\")\n",
+        "z=x*5\n",
+        "print(z)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kNfcWWOWekRd",
+        "outputId": "bb5d2d39-4017-48be-b124-4a7d0e690142"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dame un numero para multiplicar7\n",
+            "77777\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=int(input(\"dame un numero para multiplicar \"))\n",
+        "z=x*5\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bbT1prLrfXyF",
+        "outputId": "aa77165c-7b7f-48ec-ff75-c40ef95bc4c3"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dame un numero para multiplicar 8\n",
+            "40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#el doble asterisco es como elevar al cuadrado uno solo multiplica dos eleva al\n",
+        "#cuadrado, y el **.5 es como si pusieramos raiz cuadrada\n",
+        "cateto_a=float(input(\"inserta la longitud del primer cateto \"))\n",
+        "cateto_b=float(input(\"inserta la longitud del segundo cateto \"))\n",
+        "hipo=(cateto_a**2+cateto_b**2) ** .5\n",
+        "print(\"la longitud de la hipotenusa es: \", hipo)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XdSXohY1f82e",
+        "outputId": "bb976dc6-31cf-4960-dfc8-3f6ec9d67674"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "inserta la longitud del primer cateto 10\n",
+            "inserta la longitud del segundo cateto 5\n",
+            "la longitud de la hipotenusa es:  11.180339887498949\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -68,7 +198,7 @@
         "id": "wrXuiOo56R0E",
         "outputId": "0bd4737f-2805-43af-ad8e-9b21e3e28d6c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,13 +220,13 @@
         "print(type(X))"
       ],
       "metadata": {
-        "id": "yJjgoPKK7ytr",
-        "outputId": "e83485b3-c674-43fd-f8ff-0a5b35780ddb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yJjgoPKK7ytr",
+        "outputId": "e83485b3-c674-43fd-f8ff-0a5b35780ddb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
