Se creó con Colab

--- a/Programa1.ipynb
+++ b/Programa1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWNx8AXPDLHMapW5ZXb0Vs",
+      "authorship_tag": "ABX9TyMS/1g13fKogw0yuUSsTIq5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,6 +173,38 @@
             "inserta la longitud del primer cateto 10\n",
             "inserta la longitud del segundo cateto 5\n",
             "la longitud de la hipotenusa es:  11.180339887498949\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=3000\n",
+        "b=12500\n",
+        "if b>a:\n",
+        "  print(\"b es mayor que a\")\n",
+        "else:\n",
+        "  print(\"a es mayor que b\")\n",
+        "\n",
+        "print (\"fin del if\")\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2BBwSWo8jv8I",
+        "outputId": "e2a1732f-c0cc-4b19-b1ac-820c674a2d7c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b es mayor que a\n",
+            "fin del if\n"
           ]
         }
       ]
